# rsync-watch

./: .gitattributes  .gitignore  .readthedocs.yml  .travis  .travis.yml  CHANGELOG.md  Justfile  MANIFEST.in  Makefile  README.md  README.rst  README_header.md  README_template.rst  _generate-readme.py  _generate_readme.py  description  pyproject.toml  requirements.txt  rsync-watch.py  rsync_watch.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
docs/: conf.py  requirements.txt
rsync_watch/: __init__.py  _version.py  check.py  cli.py  nsca.py
rsync_watch/send_nsca/: README.md
src/rsync_watch/: __init__.py  check.py
test/: test_integration_mock.py  test_rsync_watch.py
tests/: test_cli.py  test_integration_mock.py  test_rsync_watch.py
