[tool.poetry]
name = "rsync_watch"
version = "0.5.0"
description = "A Python script to monitor the execution of a rsync task."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
]
repository = "https://github.com/Josef-Friedrich/rsync-watch"

[tool.poetry.dependencies]
python = "^3.8"
command-watcher = "^0.4.0"
conf2levels = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.961"
stdout-stderr-capturing = "^0.2.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"rsync-watch.py" = "rsync_watch:main"
