[project]
name = "rsync_watch"
version = "0.8.0"
description = "A Python script to monitor the execution of a rsync task."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["command-watcher"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/rsync-watch"

[project.scripts]
"rsync-watch.py" = "rsync_watch:main"

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "stdout-stderr-capturing>=0.2.1",
]

[tool.uv]

[tool.uv.sources]
command-watcher = { git = "https://github.com/Josef-Friedrich/command-watcher.git" }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
